--- a/assets/style.css
+++ b/assets/style.css
@@ -76,6 +76,7 @@ body {
     font-size: 1em;                 
 }
 
+
 #execute-button {
     background-color: #164194;        
     color: white;                    
@@ -121,6 +122,11 @@ body {
     font-size: 1em;
 }
 
+#download-button{
+    margin-left: 8px;
+}
+
+#download-button,
 #execute-button-llm-ck,
 #execute-button-llm {
     background-color: #164194;
@@ -133,6 +139,7 @@ body {
     font-size: 1em;
 }
 
+#download-button: hover,
 #execute-button-llm-ck:hover,
 #execute-button-llm:hover {
     background-color: #0095DB;
